prevent ConcurrentModificationExceptions in rare case that messages are logged during LogManager transfer from HoldingLogChute
git-svn-id: https://svn.apache.org/repos/asf/velocity/engine/trunk@618740 13f79535-47bb-0310-9956-ffa450edef68